# datasette-horizontal-scroll

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
datasette_horizontal_scroll/: __init__.py
datasette_horizontal_scroll/static/: datasette_horizontal_scroll.css  datasette_horizontal_scroll.js
tests/: test_datasette_horizontal_scroll.py
