[project]
name = "datasette-horizontal-scroll"
version = "0.1"
description = "A Datasette plugin that adds a fixed horizontal scrollbar at the bottom of the viewport for wide result tables."
readme = "README.md"
authors = [{name = "Ray Voelker"}]
license = "Apache-2.0"
classifiers=[
    "Framework :: Datasette"
]
requires-python = ">=3.10"
dependencies = [
    "datasette"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[project.urls]
Homepage = "https://github.com/rayvoelker/datasette-horizontal-scroll"
Changelog = "https://github.com/rayvoelker/datasette-horizontal-scroll/releases"
Issues = "https://github.com/rayvoelker/datasette-horizontal-scroll/issues"
CI = "https://github.com/rayvoelker/datasette-horizontal-scroll/actions"

[project.entry-points.datasette]
horizontal_scroll = "datasette_horizontal_scroll"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools.package-data]
datasette_horizontal_scroll = ["static/*"]
